--- a/style/cssnews.css
+++ b/style/cssnews.css
@@ -7,7 +7,9 @@
 @fa-youtube: red;
 */
 
-
+img{
+	box-shadow: 0 0 8px 8px white inset;
+}
 .fa {
     font-size: 3em;
     width: 2em;
@@ -16,15 +18,16 @@
   }
 
 body{
-	background-image: linear-gradient(to right, teal, pink, orange);
+	background-image: linear-gradient(to right, antiquewhite, white);
 	width: 80rem;
 	margin-left: auto;
 	margin-right: auto;
 	height:100rem;
-	color: white;	
+	color: darkgray;	
 }
 
 header{
+	background-image: linear-gradient(to right, teal, antiquewhite);
 	padding: 0px;
 	margin: 0px;
 	border-radius: 2rem;
@@ -41,15 +44,15 @@ main{
 }
 
 header{
+	background-image: linear-gradient(to right, teal, antiquewhite);
 	border: 3px solid teal;
-	background-color: teal;	
 	margin-left: auto;
 	margin-right: auto;
+	color: antiquewhite;
 }
 
 nav{
-	border: 3px solid teal;
-	background-color: teal;
+	
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
@@ -107,11 +110,6 @@ aside header{
 	text-align: center;
 }
 
-section{
-	
-	
-}
-
 .pauth{
 	font-style:italic;
 	
@@ -123,16 +121,6 @@ article h3{
 	
 }
 
-article{
-	
-	margin: 10px;
-
-	
-}
-
-div{
-	
-}
 
 aside{
 	
@@ -156,6 +144,8 @@ aside section article img{
 }
 footer{
   border: 3px solid teal;
+	background-image: linear-gradient(to right, teal, antiquewhite);
+
 	text-align: center;
   clear: both;
   background-color: teal;
@@ -189,9 +179,117 @@ footer address div{
 	text-align: justify;
 }
 
+article{
+	margin: 10px;
+}
+
 iframe{
 	width: 500px;
 	height: 300px;
+}
+
+.navbar{
+	
+	height: 70px;
+	width: 80%;
+	padding: 14px 30px;
+	position: relative;
+  }
+
+ 
+  .navbar .nav-header{
+	display: inline;
+  }
+  .navbar .nav-header .nav-logo{
+	display: inline-block;
+	margin-top: -7px;
+	position: relative;
+	left: -120px;
+	top: -50px;
+  }
+  .navbar .nav-links{
+	display: inline;
+	float: right;
+	font-size: 18px;
+  }
+   
+  .navbar .nav-links .loginBtn{
+	display: inline-block;
+	padding: 5px 15px;
+	margin-left: 20px;
+	font-size: 17px;
+	color: rgb(9, 14, 90);
+  }
+  .navbar .nav-links a{
+	padding: 10px 12px;
+	text-decoration: none;
+	font-weight: 550;
+	color: white;
+  }
+  /* Hover effects */
+  .navbar .nav-links a:hover{
+	background-color: rgba(0, 0, 0, 0.3);
+  }
+   
+  /* responsive navbar toggle button */
+  .navbar #nav-check, .navbar .nav-btn{
+	display: none;
+  }
+   
+  @media (max-width:700px) {
+	.navbar .nav-btn{
+	  display: inline-block;
+	  position: absolute;
+	  top: 0px;
+	  right: 0px;
+	}
+	.navbar .nav-btn label {
+	  display: inline-block;
+	  width: 80px;
+	  height: 70px;
+	  padding: 25px;
+	}
+	.navbar .nav-btn label span {
+	  display: block;
+	  height: 10px;
+	  width: 25px;
+	  border-top: 3px solid #eee;
+	}
+	.navbar .nav-btn label:hover, .navbar #nav-check:checked ~ .nav-btn label {
+	  background-color: rgb(9, 14, 90);
+	}
+	.navbar .nav-links{
+	  position: absolute;
+	  display: block;
+	  text-align: center;
+	  width: 50%;
+	  background-color: rgb(9, 14, 90);
+	  transition: all 0.3s ease-in;
+	  overflow-y: hidden;
+	  top: 70px;
+	  right: 0px;
+	}
+	.navbar .nav-links a {
+	  display: block;
+	}
+   
+	/* when nav toggle button not checked */
+	.navbar #nav-check:not(:checked) ~ .nav-links {
+	  height: 0px;
+	}
+   
+	/* when nav toggle button is checked */
+	.navbar #nav-check:checked ~ .nav-links {
+	  height: calc(100vh - 70px);
+	  overflow-y: auto;
+	}
+	.navbar .nav-links .loginBtn {
+	  padding: 10px 40px ;
+	  margin: 20px;
+	  font-size:  18px;
+	  font-weight: bold;
+	  color: rgb(9, 14, 90);
+	}
 }
 /*
 &.fa-facebook {
