--- a/style/cssnews.css
+++ b/style/cssnews.css
@@ -1,5 +1,6 @@
 *{
 	/*border: 3px solid black;*/
+	font-size: 16px;
 }
 
 img{
@@ -18,21 +19,30 @@ body{
 	background-attachment: fixed;
 	background-size: cover;
 
-	width: 80rem;
+	width: 100rem;
 	margin-left: auto;
 	margin-right: auto;
 	height:100rem;
 	color: white;	
 	font-weight: bold;
+	text-align: justify;
 }
-.bckimage{
-	
+p{
+	font-size: 20px;
+	background-color: antiquewhite;
+	color: darkblue;
+	padding: 20px;
 }
 header{
 	background-image: linear-gradient(to right, teal, antiquewhite);
 	padding: 0px;
 	margin: 0px;
 	border-radius: 2rem;
+	font-size: 30px;;
+}
+
+h1, h2 {
+	font-size: 30px;
 }
 
 main{	
@@ -51,6 +61,8 @@ header{
 	margin-left: auto;
 	margin-right: auto;
 	color: antiquewhite;
+	font-size: 40px;
+	
 }
 
 nav{
@@ -59,6 +71,7 @@ nav{
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 2rem;
+	font-size: 40px;
 }
 
 li a{
@@ -130,21 +143,29 @@ aside{
 	 margin-top: 10px;
 }
 .favgames{
-	margin-left: auto;
+	/*margin-left: auto;
 	 margin-right: auto;
+	 margin-bottom: 30px;*/
+	 margin-left: 2rem;
 	 margin-top: 2rem;
 	height: 280px;
 	width: 300px;
-	/*display: inline;*/
+	
 }
 
 .favgames img{
-	width: 60px;
-	height: 60px;
+	width: 80px;
+	height: 80px;
+	padding: 10px;
+}
+aside section article{
+	padding: 30px;
 }
 
 .favgames table{
 	width: 300px;
+	margin-bottom: 30px;
+	padding-bottom: 30px;
 }
 
 main section article img{
@@ -157,18 +178,24 @@ aside section article img{
 	float:left;
 	width: 40%;
 	margin: 10px;
-	
+		
+}
+aside section actile{
+	padding: 100px;
+	margin: 100px;
 }
 footer{
   border: 3px solid teal;
-	background-image: linear-gradient(to right, teal, antiquewhite);
-
-	text-align: center;
+  
+  background-image: linear-gradient(to right, teal, antiquewhite);
+  text-align: center;
   clear: both;
   background-color: teal;
   color: white;
   padding: 5px 20px;
-  height: 10%;
+  height: 15%;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .wingdings{
@@ -179,12 +206,31 @@ footer{
 	position: relative;
 	top: 20px;
 }
+address{
+	width: 40%;
+	text-align: center;
+	line-height: 1.5;
+}
 
 footer address div{
 
 	height: 50px;
 	align-content: center;
 	vertical-align:middle;
+	margin-bottom: 30px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer div{
+	width: 50%;
+	float: right;
+	position: relative;
+	bottom: 160px;
+	margin: 20px;
+	
+	
 }
 
 .game1{
@@ -227,13 +273,16 @@ iframe{
 
 
   }
-  .navbar .nav-links{
+  
+  .nav-links{
 	display: inline;
 	float: right;
 	font-size: 18px;
+	margin-left: 70px;
   }
    
   .navbar .nav-links {
+	float: right;
 	display: inline-block;
 	padding: 5px 15px;
 	margin-left: 20px;
@@ -246,71 +295,7 @@ iframe{
 	font-weight: 550;
 	color: white;
   }
-  /* Hover effects */
-  .navbar .nav-links a:hover{
-	background-color: rgba(0, 0, 0, 0.3);
-  }
-   
-  /* responsive navbar toggle button */
-  .navbar #nav-check, .navbar .nav-btn{
-	display: none;
-  }
-   
-  @media (max-width:700px) {
-	.navbar .nav-btn{
-	  display: inline-block;
-	  position: absolute;
-	  top: 0px;
-	  right: 0px;
-	}
-	.navbar .nav-btn label {
-	  display: inline-block;
-	  width: 80px;
-	  height: 70px;
-	  padding: 25px;
-	}
-	.navbar .nav-btn label span {
-	  display: block;
-	  height: 10px;
-	  width: 25px;
-	  border-top: 3px solid #eee;
-	}
-	.navbar .nav-btn label:hover, .navbar #nav-check:checked ~ .nav-btn label {
-	  background-color: rgb(9, 14, 90);
-	}
-	.navbar .nav-links{
-	  position: absolute;
-	  display: block;
-	  text-align: center;
-	  width: 50%;
-	  background-color: rgb(9, 14, 90);
-	  transition: all 0.3s ease-in;
-	  overflow-y: hidden;
-	  top: 70px;
-	  right: 0px;
-	}
-	.navbar .nav-links a {
-	  display: block;
-	}
-   
-	/* when nav toggle button not checked */
-	.navbar #nav-check:not(:checked) ~ .nav-links {
-	  height: 0px;
-	}
-   
-	/* when nav toggle button is checked */
-	.navbar #nav-check:checked ~ .nav-links {
-	  height: calc(100vh - 70px);
-	  overflow-y: auto;
-	}
-	.navbar .nav-links .loginBtn {
-	  padding: 10px 40px ;
-	  margin: 20px;
-	  font-size:  18px;
-	  font-weight: bold;
-	  color: rgb(9, 14, 90);
-	}
-}
+  
 
 .illgrmain{
 
@@ -320,8 +305,7 @@ iframe{
 }
 
 .illgrmain div, table{
-	text-align: center;
-	
+	text-align: center;	
 	margin-left: auto;
 	margin-right: auto;
 	width: 50rem;
@@ -350,3 +334,49 @@ iframe{
 	font-weight: bold;
 	font-size: larger;
 }
+
+
+/* Dropdown Button */
+.dropbtn {
+	background-color: #66cdaa;
+	color: white;
+	padding: 2rem;
+	font-size: 1.2rem;
+	border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+	position: relative;
+	display: inline-block;
+	/*font-weight: 550;
+	color: white;
+	font-size: 17px;*/
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #236d9e;
+	min-width: 160px;
+/*	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+	z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn, .nav-links a{background-color: #40e0d0;}
